# matplotlib-rust

./: .gitignore  .gitmodules  Makefile  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
crates/matplotlib-agg/: Cargo.toml
crates/matplotlib-agg/src/: buffer_region.rs  gc.rs  lib.rs  path.rs  renderer.rs
crates/matplotlib-ft2font/: Cargo.toml
crates/matplotlib-ft2font/src/: font.rs  lib.rs  outline.rs
crates/matplotlib-image/: Cargo.toml
crates/matplotlib-image/src/: lib.rs  resample.rs
crates/matplotlib-path/: Cargo.toml
crates/matplotlib-path/src/: lib.rs
crates/matplotlib-python/: Cargo.toml
crates/matplotlib-qhull/: Cargo.toml
crates/matplotlib-qhull/src/: lib.rs
docs/specs/: 2026-03-17-upstream-compat-design.md  2026-03-18-colormaps-design.md
docs/superpowers/plans/: 2026-03-17-upstream-compat.md  2026-03-18-colormaps.md  2026-03-18-rendering.md  2026-03-25-patches-completeness.md  (+2 more)
python/contourpy/: __init__.py
python/matplotlib/: __init__.py  _backend_agg.py  _c_internal_utils.py  _cm.py  _cm_listed.py  _codepod_compat.py  _docstring.py  _image.py  _mathtext.py  _path.py  _pil_backend.py  _qhull.py  _svg_backend.py  _to_svg_compat.py  _tri.py  artist.py  axes.py  axis.py  backend_bases.py  category.py  cm.py  collections.py  colorbar.py  colorizer.py  colors.py  container.py  contour.py  cycler.py  dates.py  figure.py  font_manager.py  ft2font.py  gridspec.py  image.py  inset.py  legend.py  lines.py  markers.py  offsetbox.py  patches.py  (+11 more)
scripts/: patch-pytest-rustpython.py  pytester-rustpython-compat.py
(+155 files in other folders)
